# pgfoundation

./: CMakeLists.txt  README.md
apps/example/: CMakeLists.txt  main.cpp
cmake/: configure_analysis.cmake  deps_cpm.cmake
examples/: CMakeLists.txt
examples/async/: CMakeLists.txt  main.cpp
examples/sandbox/: CMakeLists.txt  main.cpp
examples/simple/: CMakeLists.txt  main.cpp
libs/: CMakeLists.txt
libs/pfoundation/: CMakeLists.txt  TaskEngine.cpp  TaskEngine.hpp
pgfoundation/: CMakeLists.txt  taskengine.hpp
pgfoundation/include/pgf/caching/: GenericFactory.hpp  ResourceCache.hpp  ResourceLocator.hpp  ResourceManager.hpp
pgfoundation/include/pgf/console/: miniAnsi.hpp
pgfoundation/include/pgf/filesystem/: directory.hpp
pgfoundation/include/pgf/serialization/: Yaml2Json.hpp
pgfoundation/include/pgf/strings/: FixedLengthString.hpp  StringTools.hpp
pgfoundation/include/pgf/taskengine/: TaskEngine.hpp
pgfoundation/src/strings/: StringTools.cpp
pgfoundation/src/taskengine/: TaskEngine.cpp
pgfoundation/taskengine/: TaskEngine.cpp  TaskEngine.hpp
test/: CMakeLists.txt
